--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "vite": "^6.2.4"
     },
     "dependencies": {
+        "boxicons": "^2.1.4",
         "jquery": "^3.7.1",
         "jquery-parallax.js": "^1.5.0"
     }
